src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>LG_VisitAddressID__c</fullName>
        <description>US SFDT-54 - This field contains the address ID for the address coming from Peal Integration</description>
        <label>Visit Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitAddress__c</fullName>
        <description>Visit Address field concatenated for use in Salesforce1 to save screen space</description>
        <formula>LG_VisitStreet__c + &quot; &quot; + LG_VisitHouseNumber__c + &quot; &quot; + LG_VisitHouseNumberExtension__c + &quot;, &quot; +  LG_VisitPostalCode__c + &quot;, &quot; + LG_VisitCity__c</formula>
        <label>Visit Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCityHidden1__c</fullName>
        <formula>LG_VisitCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit City Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCityHidden2__c</fullName>
        <formula>LG_VisitCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit City Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCityHidden3__c</fullName>
        <formula>LG_VisitCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit City Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCity__c</fullName>
        <label>Visit City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCountryHidden1__c</fullName>
        <formula>TEXT (LG_VisitCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Country Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCountryHidden2__c</fullName>
        <formula>TEXT (LG_VisitCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Country Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCountryHidden3__c</fullName>
        <formula>text (LG_VisitCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Country Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCountry__c</fullName>
        <label>Visit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberExtensionHidden1__c</fullName>
        <formula>LG_VisitHouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Extension Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberExtensionHidden2__c</fullName>
        <formula>LG_VisitHouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Extension Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberExtensionHidden3__c</fullName>
        <formula>LG_VisitHouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Extension Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberExtension__c</fullName>
        <label>Visit House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberHidden1__c</fullName>
        <formula>LG_VisitHouseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberHidden2__c</fullName>
        <formula>LG_VisitHouseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberHidden3__c</fullName>
        <formula>LG_VisitHouseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit House Number Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumber__c</fullName>
        <label>Visit House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitPostalCodeHidden1__c</fullName>
        <formula>LG_VisitPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Postal Code Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitPostalCodeHidden2__c</fullName>
        <formula>LG_VisitPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Postal Code Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitPostalCodeHidden3__c</fullName>
        <formula>LG_VisitPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Postal Code Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitPostalCode__c</fullName>
        <label>Visit Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitStreetHidden1__c</fullName>
        <formula>LG_VisitStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Street Hidden1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitStreetHidden2__c</fullName>
        <formula>LG_VisitStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Street Hidden2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitStreetHidden3__c</fullName>
        <formula>LG_VisitStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Street Hidden3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitStreet__c</fullName>
        <label>Visit Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_pAddressIsvAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Postal Address same as Visiting Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadOwnerFaxNumber__c</fullName>
        <formula>Owner:User.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadOwnerFaxNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOwnerMobileNumber__c</fullName>
        <formula>Owner:User.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadOwnerMobileNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Account_Duplication_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Account Duplication Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Duplicate_Records__c</fullName>
        <formula>IF(Dulpicate_Set__c != Null, HYPERLINK(&quot;https://eu6.salesforce.com/&quot; &amp; Dulpicate_Set__c,&apos;Duplicate Record Set&apos;), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Duplicate Records</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Mobile_Availability__c, &apos;Available&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;), 
If( ISPICKVAL(Mobile_Availability__c, &apos;Unavailable&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;) 
) 
)</formula>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Mobile Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Availability__c</fullName>
        <label>Mobile Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_To_Be_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not To Be Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_PPW__c</fullName>
        <description>Auto populating this field using workflow</description>
        <label>Partner Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Phone_Availability__c, &apos;Available&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;), 
If( ISPICKVAL(Phone_Availability__c, &apos;Unavailable&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Phone Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Availability__c</fullName>
        <label>Phone Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability(%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Sales_Partner_ID_BW__c</fullName>
        <formula>UM_PartnerAccount__r.UM_P_Sales_ID_BW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales ID BW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Sales_Partner_ID_NRW_HSN__c</fullName>
        <formula>UM_PartnerAccount__r.UM_P_Sales_ID_NRW_HSN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales ID NRW/HSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Analog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_AssignedLeadNotContacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that equals true when an assigned lead is not contacted</description>
        <label>Assigned Lead Not Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountNumberBic__c</fullName>
        <label>BIC code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_CompanyAddress_BW__c</fullName>
        <formula>IF(Owner:User.CompanyName == &apos;Unitymedia BW GmbH&apos; , $Label.UM_Unitymedia_BW_GmbH_D2D_Address,
IF( Owner:User.CompanyName == &apos;Unitymedia Hessen GmbH &amp; Co. KG&apos; , $Label.UM_Unitymedia_Hessen_GmbH_Co_KG_D2D_Address ,
IF( Owner:User.CompanyName == &apos;Unitymedia NRW GmbH&apos; , $Label.UM_Unitymedia_NRW_GmbH_D2D_Address,
&apos;&apos;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM_CompanyAddress_BW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DetailedIndustryClassification__c</fullName>
        <label>Detailed Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UM_IndustryClassification__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>UM_DetailedIndustryClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IBANValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IBAN Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IndustryClassification__c</fullName>
        <label>Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_IndustryClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_LeadId__c</fullName>
        <label>Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Legal_Name__c</fullName>
        <label>Account Name Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_OwnerChanges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Owner Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Owner_Company__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM_Owner_Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Partner)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_PartnerUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user to capture partner user that confirmed the lead</description>
        <label>Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_PostalGeolocation__c</fullName>
        <label>Postal Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UM_Postal_State__c</fullName>
        <label>Postal State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>NRW</fullName>
                </value>
                <value>
                    <fullName>HSN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Product__c</fullName>
        <description>Field to capture selected product from web form</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_VisitGeolocation__c</fullName>
        <label>Visit Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UM_VisitStateProvince__c</fullName>
        <label>Visit State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>HSN</fullName>
                </value>
                <value>
                    <fullName>NRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Status__c</fullName>
        <label>ÜP-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_To_lead_Interest__c</fullName>
        <label>Web To lead Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LG_NewSalesChannel__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Contacted,Contacted - Decision maker not available</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>lessThan</operation>
            <value>6000,Contacted - Follow up,Contacted - Future interest</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsD2D</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>LG_VisitHouseNumberExtension__c</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>LG_VisitCity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Not Contacted</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacted</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted - Decision maker not available,Contacted - Follow up</value>
        </filters>
        <label>Contacted</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <portalRole>AustinatHaarhausPartnerExecutive</portalRole>
            <portalRole>AustinatHaarhausPartnerManager</portalRole>
            <portalRole>AustinatHaarhausPartnerUser</portalRole>
            <portalRole>BBSOfficeUGHermannPartnerExecutive</portalRole>
            <portalRole>BBSOfficeUGHermannPartnerManager</portalRole>
            <portalRole>BBSOfficeUGHermannPartnerUser</portalRole>
            <portalRole>BadenovaAGPartnerExecutive</portalRole>
            <portalRole>BadenovaAGPartnerManager</portalRole>
            <portalRole>BadenovaAGPartnerUser</portalRole>
            <portalRole>CleverGroupAGCoTelkomKGPartnerExecutive</portalRole>
            <portalRole>CleverGroupAGCoTelkomKGPartnerManager</portalRole>
            <portalRole>CleverGroupAGCoTelkomKGPartnerUser</portalRole>
            <portalRole>ColonisterPartnerExecutive</portalRole>
            <portalRole>ColonisterPartnerManager</portalRole>
            <portalRole>ColonisterPartnerUser</portalRole>
            <portalRole>ComconicGmbHPartnerExecutive</portalRole>
            <portalRole>ComconicGmbHPartnerManager</portalRole>
            <portalRole>ComconicGmbHPartnerUser</portalRole>
            <portalRole>DatenflussITPartnerExecutive</portalRole>
            <portalRole>DatenflussITPartnerManager</portalRole>
            <portalRole>DatenflussITPartnerUser</portalRole>
            <portalRole>DieGefhrtenPartnerExecutive</portalRole>
            <portalRole>DieGefhrtenPartnerManager</portalRole>
            <portalRole>DieGefhrtenPartnerUser</portalRole>
            <portalRole>DummyPartnerdonotdeletePartnerExecutive</portalRole>
            <portalRole>DummyPartnerdonotdeletePartnerManager</portalRole>
            <portalRole>DummyPartnerdonotdeletePartnerUser</portalRole>
            <portalRole>ESPBusinessGmbHPartnerExecutive</portalRole>
            <portalRole>ESPBusinessGmbHPartnerManager</portalRole>
            <portalRole>ESPBusinessGmbHPartnerUser</portalRole>
            <portalRole>GWKomPartnerExecutive</portalRole>
            <portalRole>GWKomPartnerManager</portalRole>
            <portalRole>GWKomPartnerUser</portalRole>
            <portalRole>GigamediaGmbHPartnerExecutive</portalRole>
            <portalRole>GigamediaGmbHPartnerManager</portalRole>
            <portalRole>GigamediaGmbHPartnerUser</portalRole>
            <portalRole>HASKommuniksysPartnerExecutive</portalRole>
            <portalRole>HASKommuniksysPartnerManager</portalRole>
            <portalRole>HASKommuniksysPartnerUser</portalRole>
            <portalRole>HESTUMAPartnerExecutive</portalRole>
            <portalRole>HESTUMAPartnerManager</portalRole>
            <portalRole>HESTUMAPartnerUser</portalRole>
            <portalRole>HuslerKGPartnerExecutive</portalRole>
            <portalRole>HuslerKGPartnerManager</portalRole>
            <portalRole>HuslerKGPartnerUser</portalRole>
            <portalRole>IPMIntranetProjektManagementPartnerExecutive</portalRole>
            <portalRole>IPMIntranetProjektManagementPartnerManager</portalRole>
            <portalRole>IPMIntranetProjektManagementPartnerUser</portalRole>
            <portalRole>KhneTrsterGesellschaftVertriebsentwicklungmbHPartnerExecutive</portalRole>
            <portalRole>KhneTrsterGesellschaftVertriebsentwicklungmbHPartnerManager</portalRole>
            <portalRole>KhneTrsterGesellschaftVertriebsentwicklungmbHPartnerUser</portalRole>
            <portalRole>KlausTemannDigitaleKommunikationslsungenPartnerExecutive</portalRole>
            <portalRole>KlausTemannDigitaleKommunikationslsungenPartnerManager</portalRole>
            <portalRole>KlausTemannDigitaleKommunikationslsungenPartnerUser</portalRole>
            <portalRole>MaxifoneMBCMobileBusinessPartnerExecutive</portalRole>
            <portalRole>MaxifoneMBCMobileBusinessPartnerManager</portalRole>
            <portalRole>MaxifoneMBCMobileBusinessPartnerUser</portalRole>
            <portalRole>MediasalesGmbHPartnerExecutive</portalRole>
            <portalRole>MediasalesGmbHPartnerManager</portalRole>
            <portalRole>MediasalesGmbHPartnerUser</portalRole>
            <portalRole>MobexPartnerExecutive</portalRole>
            <portalRole>MobexPartnerManager</portalRole>
            <portalRole>MobexPartnerUser</portalRole>
            <portalRole>OmrexGmbHPartnerExecutive</portalRole>
            <portalRole>OmrexGmbHPartnerManager</portalRole>
            <portalRole>OmrexGmbHPartnerUser</portalRole>
            <portalRole>PowerPhoneGmbHPartnerExecutive</portalRole>
            <portalRole>PowerPhoneGmbHPartnerManager</portalRole>
            <portalRole>PowerPhoneGmbHPartnerUser</portalRole>
            <portalRole>ProcomPartnerExecutive</portalRole>
            <portalRole>ProcomPartnerManager</portalRole>
            <portalRole>ProcomPartnerUser</portalRole>
            <portalRole>SHBusinessCOMGmbHPartnerExecutive</portalRole>
            <portalRole>SHBusinessCOMGmbHPartnerManager</portalRole>
            <portalRole>SHBusinessCOMGmbHPartnerUser</portalRole>
            <portalRole>SenerConsultingGmbHPartnerExecutive</portalRole>
            <portalRole>SenerConsultingGmbHPartnerManager</portalRole>
            <portalRole>SenerConsultingGmbHPartnerUser</portalRole>
            <portalRole>TeamAdvicePartnerExecutive</portalRole>
            <portalRole>TeamAdvicePartnerManager</portalRole>
            <portalRole>TeamAdvicePartnerUser</portalRole>
            <portalRole>TeleportKlnGmbHPartnerExecutive</portalRole>
            <portalRole>TeleportKlnGmbHPartnerManager</portalRole>
            <portalRole>TeleportKlnGmbHPartnerUser</portalRole>
            <portalRole>TestPartnerAccountPartnerExecutive</portalRole>
            <portalRole>TestPartnerAccountPartnerManager</portalRole>
            <portalRole>TestPartnerAccountPartnerUser</portalRole>
            <portalRole>UnifiedSolutionPartnerExecutive</portalRole>
            <portalRole>UnifiedSolutionPartnerManager</portalRole>
            <portalRole>UnifiedSolutionPartnerUser</portalRole>
            <portalRole>creativITyGmbHPartnerExecutive</portalRole>
            <portalRole>creativITyGmbHPartnerManager</portalRole>
            <portalRole>creativITyGmbHPartnerUser</portalRole>
            <portalRole>eVisionMSGPartnerExecutive</portalRole>
            <portalRole>eVisionMSGPartnerManager</portalRole>
            <portalRole>eVisionMSGPartnerUser</portalRole>
            <portalRole>itsonGmbHDetmoldPartnerExecutive</portalRole>
            <portalRole>x3iMediaGmbHPartnerExecutive</portalRole>
            <portalRole>x3iMediaGmbHPartnerManager</portalRole>
            <portalRole>x3iMediaGmbHPartnerUser</portalRole>
        </sharedTo>
    </listViews>
</CustomObject>